--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,12 +3,12 @@
 html, body {
 	height: 100%;
 	width: 100%;
-	padding: 0 1vw;
+	padding: 0 6vw;
 	margin: 0;
-	background: #FAFAFA;
+	background: #000;
 	font-family: 'Helvetica Neue', arial, sans-serif;
 	font-weight: 400;
-	color: #444;
+	color: #fff;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -24,7 +24,7 @@ html, body {
 
 a {
 	text-decoration: none;
-	color: #333;
+	color: #fff;
 }
 
 .loading {
